--- a/src/main/resources/static/goodsDetail.htm
+++ b/src/main/resources/static/goodsDetail.htm
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<html >
+<html>
 <head>
     <title>商品详情</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <!-- jquery -->
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <!-- bootstrap -->
-    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"/>
     <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
     <!-- jquery-validator -->
     <script type="text/javascript" src="/jquery-validation/jquery.validate.min.js"></script>
@@ -32,18 +32,19 @@
         </tr>
         <tr>
             <td>商品图片</td>
-            <td colspan="3"><img  id="goodsImg" width="200" height="200" /></td>
+            <td colspan="3"><img id="goodsImg" width="200" height="200"/></td>
         </tr>
         <tr>
             <td>秒杀开始时间</td>
             <td id="startTime"></td>
-            <td >
-                <input type="hidden" id="remainSeconds" />
+            <td>
+                <input type="hidden" id="remainSeconds"/>
                 <span id="seckillTip"></span>
             </td>
             <td>
-                <button class="btn btn-primary btn-block" type="button" id="buyButton" onclick="doSeckill()">立即秒杀</button>
-                <input type="hidden" name="goodsId"  id="goodsId" />
+                <button class="btn btn-primary btn-block" type="button" id="buyButton" onclick="doSeckill()">立即秒杀
+                </button>
+                <input type="hidden" name="goodsId" id="goodsId"/>
             </td>
         </tr>
         <tr>
@@ -52,64 +53,65 @@
         </tr>
         <tr>
             <td>秒杀价</td>
-            <td colspan="3"  id="seckillPrice"></td>
+            <td colspan="3" id="seckillPrice"></td>
         </tr>
         <tr>
             <td>库存数量</td>
-            <td colspan="3"  id="stockCount"></td>
+            <td colspan="3" id="stockCount"></td>
         </tr>
     </table>
 </div>
 </body>
 <script>
-    function getSeckillResult(goodsId){
+    function getSeckillResult(goodsId) {
         g_showLoading();
         $.ajax({
-            url:"/seckill/result",
-            type:"GET",
-            data:{
-                goodsId:$("#goodsId").val(),
-            },
-            success:function(data){
-                if(data.code == 0){
-                    var result = data.data;
-                    if(result < 0){
-                        layer.msg("对不起，秒杀失败");
-                    }else if(result == 0){//继续轮询
-                        setTimeout(function(){
-                            getSeckillResult(goodsId);
-                        }, 50);
-                    }else{
-                        layer.confirm("恭喜你，秒杀成功！查看订单？", {btn:["确定","取消"]},
-                            function(){
-                                window.location.href="/order_detail.htm?orderId="+result;
-                            },
-                            function(){
-                                layer.closeAll();
-                            });
-                    }
-                }else{
-                    layer.msg(data.msg);
-                }
-            },
-            error:function(){
-                layer.msg("客户端请求有误");
-            }
-        });
-    }
-    function doSeckill() {
-        $.ajax({
-            url: "/seckill/do_seckill",
-            type: "POST",
+            url: "/seckill/result",
+            type: "GET",
             data: {
                 goodsId: $("#goodsId").val(),
             },
             success: function (data) {
                 if (data.code === 0) {
-//                    window.location.href = "/order_detail.htm?orderId=" + data.data.id;
-                    getSeckillResult($("#goodsId").val());
+                    var result = data.data;
+                    if (result < 0) {
+                        layer.msg("对不起，秒杀失败");
+                    } else if (result === 0) {//继续轮询
+                        setTimeout(function () {
+                            getSeckillResult(goodsId);
+                        }, 50);
+                    } else {
+                        layer.confirm("恭喜你，秒杀成功！查看订单？", {btn: ["确定", "取消"]},
+                            function () {
+                                window.location.href = "/orderDetail.htm?orderId=" + result;
+                            },
+                            function () {
+                                layer.closeAll();
+                            });
+                    }
                 } else {
                     layer.msg(data.msg);
+                }
+            },
+            error: function () {
+                layer.msg("客户端请求有误");
+            }
+        });
+    }
+
+    function doSeckill() {
+        $.ajax({
+            url: "/seckill/doSeckill",
+            type: "POST",
+            data: {
+                goodsId: $("#goodsId").val(),
+            },
+            success: function (data) {
+                if (data.code === 200) {
+                    window.location.href = "/orderDetail.htm?orderId=" + data.obj.id;
+                    //getSeckillResult($("#goodsId").val());
+                } else {
+                    layer.msg(data.message);
                 }
             },
             error: function () {
@@ -121,7 +123,7 @@
     function render(detail) {
         var seckillStatus = detail.seckillStatus;
         var remainSeconds = detail.remainSeconds;
-        var goods = detail.goods;
+        var goods = detail.goodsVo;
         var user = detail.user;
         if (user) {
             $("#userTip").hide();
@@ -134,10 +136,10 @@
         $("#goodsPrice").text(goods.goodsPrice);
         $("#seckillPrice").text(goods.seckillPrice);
         $("#stockCount").text(goods.stockCount);
+        countDown();
     }
 
     $(function () {
-        countDown();
         getDetail();
     });
 
@@ -145,11 +147,12 @@
         var goodsId = g_getQueryString("goodsId");
         $.ajax({
             url: "/goods/detail/" + goodsId,
-            type: "GET",
+            type: "POST",
             success: function (data) {
-                if (data.code == 0) {
+                if (data.code === 200) {
                     //将数据渲染出来
-                    render(data.data);
+                    render(data.obj);
+
                 } else {
                     layer.msg(data.msg);
                 }
@@ -164,21 +167,21 @@
         var remainSeconds = $("#remainSeconds").val();
         var timeout;
         if (remainSeconds > 0) {//秒杀还没开始，倒计时
-            $("#buyButton").attr("disabled", true);
+            //$("#buyButton").attr("disabled", true);
             $("#seckillTip").html("秒杀倒计时：" + remainSeconds + "秒");
             timeout = setTimeout(function () {
                 $("#countDown").text(remainSeconds - 1);
                 $("#remainSeconds").val(remainSeconds - 1);
                 countDown();
             }, 1000);
-        } else if (remainSeconds == 0) {//秒杀进行中
-            $("#buyButton").attr("disabled", false);
+        } else if (remainSeconds === 0) {//秒杀进行中
+            //$("#buyButton").attr("disabled", false);
             if (timeout) {
                 clearTimeout(timeout);
             }
             $("#seckillTip").html("秒杀进行中");
         } else {//秒杀已经结束
-            $("#buyButton").attr("disabled", true);
+            //$("#buyButton").attr("disabled", true);
             $("#seckillTip").html("秒杀已经结束");
         }
     }
