--- a/src/main/resources/static/orderDetail.htm
+++ b/src/main/resources/static/orderDetail.htm
@@ -67,9 +67,9 @@
         $("#orderPrice").text(order.goodsPrice);
         $("#createDate").text(new Date(order.createDate).format("yyyy-MM-dd hh:mm:ss"));
         var status = "";
-        if(order.status == 0){
+        if(order.status === 0){
             status = "未支付"
-        }else if(order.status == 1){
+        }else if(order.status === 1){
             status = "待发货";
         }
         $("#orderStatus").text(status);
@@ -88,7 +88,7 @@
                 orderId:orderId
             },
             success:function(data){
-                if(data.code == 0){
+                if(data.code === 200){
                     render(data.data);
                 }else{
                     layer.msg(data.msg);
