订单详情界面处理了

--- a/src/main/resources/static/orderDetail.htm
+++ b/src/main/resources/static/orderDetail.htm
@@ -89,9 +89,9 @@
             },
             success:function(data){
                 if(data.code === 200){
-                    render(data.data);
+                    render(data.obj);
                 }else{
-                    layer.msg(data.msg);
+                    layer.msg(data.message);
                 }
             },
             error:function(){
