--- a/src/main/resources/static/goodsDetail.htm
+++ b/src/main/resources/static/goodsDetail.htm
@@ -73,7 +73,7 @@
             },
             success: function (data) {
                 if (data.code === 0) {
-                    var result = data.data;
+                    var result = data.obj;
                     if (result < 0) {
                         layer.msg("对不起，秒杀失败");
                     } else if (result === 0) {//继续轮询
@@ -83,7 +83,7 @@
                     } else {
                         layer.confirm("恭喜你，秒杀成功！查看订单？", {btn: ["确定", "取消"]},
                             function () {
-                                window.location.href = "/orderDetail.htm?orderId=" + result;
+                                window.location.href = "/orderDetail.htm?orderId=" + result.order.id;
                             },
                             function () {
                                 layer.closeAll();
@@ -108,7 +108,7 @@
             },
             success: function (data) {
                 if (data.code === 200) {
-                    window.location.href = "/orderDetail.htm?orderId=" + data.obj.id;
+                    window.location.href = "/orderDetail.htm?orderId=" + data.obj.order.id;
                     //getSeckillResult($("#goodsId").val());
                 } else {
                     layer.msg(data.message);
